samples/_failures_safe/1761731195_8080c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f73f664d.c: In function ‘main’:
./samples/SAFE/__tmp_f73f664d.c:159:5: error: expected ‘{’ at end of input
  159 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_f73f664d.c:159:5: error: expected declaration or statement at end of input
